--- a/src/app/posts/201.md
+++ b/src/app/posts/201.md
@@ -3,6 +3,7 @@ title: 'Trabalho e Imigração: algumas notas para interpretar e transformar o p
 subtitle: ''
 date: '2026-01-25'
 author: "José Soeiro"
+authorDescription: "Sociólogo e membro da direção da revista Que Força É Essa?"
 section: 'Trabalho e Imigração'
 ---
 
