--- a/src/app/posts/202.md
+++ b/src/app/posts/202.md
@@ -3,6 +3,7 @@ title: 'Contradições à portuguesa?'
 subtitle: 'Entre envelhecimento, escassez de trabalhadores e constrangimentos à entrada e permanência de mão-de-obra estrangeira'
 date: '2026-01-21'
 author: "Catarina Reis de Oliveira"
+authorDescription: "Professora no ISCSP e Investigadora do CAPP, Ex-Diretora do Observatório das Migrações"
 section: 'Trabalho e Imigração'
 ---
 
