--- a/src/app/posts/204.md
+++ b/src/app/posts/204.md
@@ -3,6 +3,7 @@ title: 'Condições de trabalho e controle público: imigrantes e trabalho infor
 subtitle: ''
 date: '2026-01-25'
 author: "João Fraga de Oliveira"
+authorDescription: "Inspector do trabalho aposentado"
 section: 'Trabalho e Imigração'
 ---
 
