--- a/src/app/posts/205.md
+++ b/src/app/posts/205.md
@@ -2,7 +2,12 @@
 title: 'Migrações, trabalho e (re)existências'
 subtitle: ''
 date: '2026-01-25'
-author: "Joana Guimarães, Joana S. Marques, Ana Luísa Martinho, Joana Topa"
+author: 
+    - "Joana Guimarães"
+    - "Joana S. Marques"
+    - "Ana Luísa Martinho"
+    - "Joana Topa"
+authorDescription: "IMembros do projeto de investigação-ação MIGAP – MigrAção no Porto"
 section: 'Trabalho e Imigração'
 ---
 
