--- a/src/app/posts/206.md
+++ b/src/app/posts/206.md
@@ -2,7 +2,10 @@
 title: 'Trabalho em plataformas digitais na atualidade e a Associação de Imigrantes e Trabalhadores por Aplicação'
 subtitle: ''
 date: '2026-01-25'
-author: "Marcel Borges, Hans Donner"
+author: 
+    - "Marcel Borges"
+    - "Hans Donner"
+authorDescription: "Dirigentes da Asitrap (Associação dos Imigrantes e Trabalhadores por Aplicação/ Estafetas em Luta)"
 section: 'Trabalho e Imigração'
 ---
 
