--- a/src/app/posts/207.md
+++ b/src/app/posts/207.md
@@ -3,6 +3,7 @@ title: 'Capitalismo (Racial) de Plataformas e a realidade dos estafetas em Portu
 subtitle: ''
 date: '2026-01-25'
 author: "João Pedro Carraça"
+authroDescription: "Doutorando em Sociologia, ICS-ULisboa"
 section: 'Trabalho e Imigração'
 --- 
 
