--- a/src/app/posts/209.md
+++ b/src/app/posts/209.md
@@ -3,6 +3,7 @@ title: 'Trabalho XXI - Anteprojeto de Lei da Reforma da Legislação Laboral'
 subtitle: 'A agenda anti laboral e antissindical que é imperioso travar'
 date: '2026-01-25'
 author: "Maria da Paz Campos Lima"
+authorDescription: "Socióloga, membro da Direção da revista Que Força É Essa?"
 section: 'Contra-reforma laboral'
 ---
 
