--- a/src/app/posts/210.md
+++ b/src/app/posts/210.md
@@ -3,6 +3,7 @@ title: 'Trabalho XXI - Anteprojeto de Lei da Reforma da Legislação Laboral'
 subtitle: 'Da liberdade para oprimir'
 date: '2026-01-25'
 author: "João Leal Amado"
+authorDescription: "Professor da Faculdade de Direito da Universidade de Coimbra"
 section: 'Contra-reforma laboral'
 ---
 
