--- a/src/app/posts/211.md
+++ b/src/app/posts/211.md
@@ -3,6 +3,7 @@ title: 'O Anteprojeto XXI, a contratação coletiva e a Constituição'
 subtitle: ''
 date: '2026-01-25'
 author: "João Carlos Simões Reis"
+authorDescription: "Professor da Faculdade de Direito da Universidade de Coimbra"
 section: 'Contra-reforma laboral'
 ---
 
