--- a/src/app/posts/212.md
+++ b/src/app/posts/212.md
@@ -3,6 +3,7 @@ title: 'Os trabalhadores e a sociedade civil em ação pró-Palestina!'
 subtitle: ''
 date: '2026-01-25'
 author: "Leopoldo Tartaglia"
+authorDescription: "Ex-dirigente do Departamento Internacional da CGIL. Membro da Assembleia Nacional da SPI/CGIL (União Nacional dos Aposentados)"
 section: 'Internacional'
 ---
 
