--- a/src/app/posts/213.md
+++ b/src/app/posts/213.md
@@ -3,6 +3,7 @@ title: 'A transição tecnológica na indústria automóvel e a posição
 subtitle: ''
 date: '2026-01-25'
 author: "António Brandão Moniz"
+authorDescription: "Professor na Universidade Nova de Lisboa, CICS.NOVA, Portugal"
 section: ''
 ---
 
