--- a/src/app/posts/214.md
+++ b/src/app/posts/214.md
@@ -3,6 +3,7 @@ title: 'Algumas propostas de alteração do regime jurídico dos despedimentos p
 subtitle: ''
 date: '2026-01-25'
 author: "Catarina Gomes Santos"
+authorDescription: "Professora assistente convidada na Escola de Direito do Porto da Universidade Católica Portuguesa, Doutora em Ciências Jurídico-Empresariais pela Faculdade de Direito da Universidade de Coimbra"
 section: ''
 ---
 
