--- a/src/app/posts/216.md
+++ b/src/app/posts/216.md
@@ -3,6 +3,7 @@ title: 'A democracia não pode ficar à porta das empresas'
 subtitle: 'A propósito de uma conferência internacional sobre democracia económica'
 date: '2026-01-25'
 author: "Henrique Sousa"
+authorDescription: "Politólogo, dirigente da Práxis, membro da comissão organizadora da conferência"
 section: ''
 ---
 
