--- a/src/app/posts/217.md
+++ b/src/app/posts/217.md
@@ -3,6 +3,7 @@ title: 'Fechado, fechado, fechado. Tempo de viver.'
 subtitle: 'A iniciativa Legislativa Cidadã com vista ao encerramento do comércio ao domingo'
 date: '2026-01-25'
 author: "Joana Neto"
+authorDescription: "Professora na Universidade do Minho e na Universidade Lusófona. Membro da direção da revista Que Força É Essa?"
 section: 'Consultório Jurídico'
 ---
 
