--- a/src/app/posts/218.md
+++ b/src/app/posts/218.md
@@ -3,6 +3,7 @@ title: 'Artigo 498.º-A "Terceirização de serviços" -- breves considerações
 subtitle: ''
 date: '2026-01-25'
 author: "Ana Teresa Ribeiro"
+authorDescription: "Professora auxiliar na Escola do Porto da Faculdade de Direito da Universidade Católica Portuguesa"
 section: 'Consultório Jurídico'
 ---
 
