--- a/src/app/posts/219.md
+++ b/src/app/posts/219.md
@@ -3,6 +3,7 @@ title: 'Sindicatos'
 subtitle: ''
 date: '2026-01-25'
 author: "Hermes Augusto Costa"
+authorDescription: "Universidade de Coimbra, Faculdade de Economia, Centro de Estudos Sociais"
 section: 'Abecedário Crítico'
 ---
 
