--- a/src/app/posts/220.md
+++ b/src/app/posts/220.md
@@ -3,6 +3,7 @@ title: 'Cromos da Caderneta do Trabalho'
 subtitle: ''
 date: '2026-01-25'
 author: "Jorge Louraço Figueira"
+authorDescription: "Professor e dramaturgo"
 section: 'Culturas do Trabalho'
 ---
 
