--- a/src/app/posts/221.md
+++ b/src/app/posts/221.md
@@ -3,6 +3,7 @@ title: 'Concise Introduction to Employment Relations'
 subtitle: ''
 date: '2026-01-25'
 author: "Maria da Paz Campos Lima"
+authorDescription: "Socióloga, membro da Direção da revista Que Força É Essa?"
 section: 'Recensões'
 ---
 
