--- a/src/app/posts/203.md
+++ b/src/app/posts/203.md
@@ -3,6 +3,7 @@ title: 'Greve Geral, Precariedade e Trabalho Escravo'
 subtitle: ''
 date: '2026-01-25'
 author: "Alberto Matos"
+authorDescription: "Dirigente da Associação Solidariedade Imigrante"
 section: 'Trabalho e Imigração'
 ---
 
