--- a/src/app/posts/215.md
+++ b/src/app/posts/215.md
@@ -3,6 +3,7 @@ title: 'Uma luta exemplar de trabalhadores em outsourcing'
 subtitle: 'o caso dos bares da Comboios de Portugal'
 date: '2026-01-25'
 author: "Daniel Borges"
+authorDescription: "Jornalista freelancer e sociólogo"
 section: ''
 ---
 
