--- a/src/app/posts/221.md
+++ b/src/app/posts/221.md
@@ -57,5 +57,5 @@ na interseção das dinâmicas locais e globais; a expansão do
 colocam à organização e ação coletiva; e o(s) futuro(s) das relações
 laborais em tempos de pandemia, guerra e desastre ecológico.
 
-Uma leitura imprescindível! Uma contribuição critica notável! Pela(s)
+Uma leitura imprescindível! Uma contribuição crítica notável! Pela(s)
 causa(s) dos trabalhadores e da sua ação coletiva!
