--- a/src/app/posts/61.md
+++ b/src/app/posts/61.md
@@ -3,7 +3,7 @@ title: 'Greve geral: mobilização social para fazer recuar o governo e o seu pa
 subtitle: ''
 date: '2025-11-29'
 author: "Henrique Sousa"
-section: 'Greve Geral'
+section: 'Contra-reforma laboral'
 ---
 
 O pacote laboral apresentado pelo Governo, que quer mexer em mais de 100 artigos do Código do Trabalho e ainda noutras leis laborais, é uma proposta contra os trabalhadores, que só interessa e tem apoio das confederações patronais. Não é de admirar que tenha recebido a oposição unânime de todo o movimento sindical e de todas as suas correntes. E que a CGTP e a UGT, 12 anos depois da última greve geral conjunta, sintam a necessidade de voltar a juntar forças para combater o mais grave ataque aos direitos dos trabalhadores das últimas décadas, convocando a greve geral de 11 de Dezembro.
