--- a/src/app/posts/66.md
+++ b/src/app/posts/66.md
@@ -3,7 +3,7 @@ title: 'É uma greve pela democracia'
 subtitle: ''
 date: '2025-11-15'
 author: "Manuel Carvalho da Silva"
-section: 'Greve Geral'
+section: 'Contra-reforma laboral'
 ---
 
 ![Créditos: José Soeiro](/images/grevegeralpedra.jpg)
