--- a/src/app/posts/67.md
+++ b/src/app/posts/67.md
@@ -3,7 +3,7 @@ title: 'TRÊS DESENHOS PELA GREVE'
 subtitle: ''
 date: '2025-12-10'
 author: "Regina Guimarães"
-section: 'Greve Geral'
+section: 'Contra-reforma laboral'
 ---
 
 ![](/images/regina2.jpeg)
