--- a/src/app/posts/68.md
+++ b/src/app/posts/68.md
@@ -3,7 +3,7 @@ title: 'Que venha a rua!'
 subtitle: ''
 date: '2025-12-10'
 author: "Margarida Chagas Lopes"
-section: 'Greve Geral'
+section: 'Contra-reforma laboral'
 ---
 
 ![Créditos: Regina Guimarães](/images/regina2.jpeg)
