--- a/src/app/posts/69.md
+++ b/src/app/posts/69.md
@@ -3,7 +3,7 @@ title: 'Uma greve geral pela dignidade'
 subtitle: ''
 date: '2025-12-10'
 author: "Manuel Loff"
-section: 'Greve Geral'
+section: 'Contra-reforma laboral'
 ---
 
 ![](/images/loff.jpeg)
