--- a/src/app/posts/70.md
+++ b/src/app/posts/70.md
@@ -3,7 +3,7 @@ title: 'Contra o cinismo, a esperança'
 subtitle: ''
 date: '2025-12-18'
 author: "Manuel Carvalho da Silva"
-section: 'Greve Geral'
+section: 'Contra-reforma laboral'
 ---
 
 ![](/images/greve70.jpeg)
