--- a/src/app/posts/63.md
+++ b/src/app/posts/63.md
@@ -3,7 +3,7 @@ title: 'Greve geral, o “Trabalho XXI”, precariedade e Bertolt Brecht'
 subtitle: ''
 date: '2025-12-06'
 author: "João Fraga de Oliveira"
-section: 'Greve Geral'
+section: 'Contra-reforma laboral'
 ---
 ![Créditos: José Soeiro](/images/63.jpeg)
 
