--- a/src/app/posts/64.md
+++ b/src/app/posts/64.md
@@ -3,7 +3,7 @@ title: 'As greves e as estatísticas: um casamento pouco virtuoso'
 subtitle: ''
 date: '2025-12-09'
 author: "Henrique Sousa"
-section: 'Greve Geral'
+section: 'Contra-reforma laboral'
 ---
 
 ![Créditos: José Soeiro](/images/grevegeralgrafitti.png)
