--- a/src/app/posts/209.md
+++ b/src/app/posts/209.md
@@ -1,5 +1,5 @@
 ---
-title: 'Trabalho XXI - Anteprojeto de Lei da Reforma da Legislação Laboral'
+title: 'Trabalho XXI:'
 subtitle: 'A agenda anti laboral e antissindical que é imperioso travar'
 date: '2026-01-25'
 author: "Maria da Paz Campos Lima"
