--- a/src/app/posts/210.md
+++ b/src/app/posts/210.md
@@ -1,5 +1,5 @@
 ---
-title: 'Trabalho XXI - Anteprojeto de Lei da Reforma da Legislação Laboral'
+title: 'Trabalho XXI:'
 subtitle: 'Da liberdade para oprimir'
 date: '2026-01-25'
 author: "João Leal Amado"
