audio e revista atualizada

--- a/src/app/posts/220.md
+++ b/src/app/posts/220.md
@@ -76,8 +76,11 @@ Enxada), como se pode ver na foto seguinte.
 
 A cena é cantada e a música é tradicional, tocada ao piano por Pedro
 Almeida, e os versos são de Jorge Louraço Figueira e de Pedro Almeida.
-Trata-se de uma chula, que pode ser ouvida aqui \[linkar ficheiro
-áudio\], para acompanhar a cantoria. Os versos ficaram assim:
+Trata-se de uma chula, que pode ser ouvida aqui, para acompanhar a cantoria:
+
+[](/audio/jorgelouraco.wav)
+
+Os versos ficaram assim:
 
 *ZÉ POVINHO*
 
