--- a/src/app/posts/2.md
+++ b/src/app/posts/2.md
@@ -6,7 +6,7 @@ author: 'Manuel Carvalho da Silva'
 section: '50 anos do 25 de Abril'
 ---
 
-![Créditos: Paulete Matos](/images/6_PM.jpg)
+![Fotografia de Paulete Matos](/images/6_PM.jpg)
 
 **Da Luta Contra o Fascismo ao 25 de Abril de 1974**
 
@@ -140,7 +140,7 @@ seus interesses e para o confronto com os inimigos do regime
 democrático. Essa opção surgiu marcante no Congresso de Todos os
 Sindicatos (2º da Intersindical), em janeiro de 1977.
 
-![Créditos: Paulete Matos](/images/12_PM.jpg)
+![Fotografia de Paulete Matos](/images/12_PM.jpg)
 
 **Notas sobre avanços e recuos**
 
