--- a/src/app/posts/200.md
+++ b/src/app/posts/200.md
@@ -14,7 +14,7 @@ Esta publicação acontece entre dois momentos com grande significado, a greve g
 
 Este segundo volume da revista traz **dois dossiers centrais.**
 
-No primeiro, sobre **Trabalho e Imigração**, reflete-se sobre a grande transformação no perfil e na composição da classe trabalhadora que resulta de uma presença crescente de trabalhadores estrangeiros em Portugal, e sobre os desafios políticos, económicos, demográficos, sindicais e de organização que isso coloca. O dossier conta com textos de **José Soeiro** (sociólgo e membro da direção da revista), **Catarina Reis de Oliveira** (que dirigiu o Observatório da Imigração), **Alberto Matos** (da associação Solidariedade Imigrante), **João Fraga de Oliveira** (inspetor do trabalho), **Marcel Borges e Hans Donner** (da Associação de Imigrantes Trabalhadores por Aplicação), **Joana Guimarães, Joana S. Marques, Ana Luísa Martinho, Joana Topa** (do projeto MIGAP - MigrAção no Porto) e de **João Pedro Carraça** (investigador). Trata-se de um conjunto de contributos sobre um tema incontornável para o presente e o futuro do trabalho e para construir uma intervenção que tenha em conta a classe trabalhadora realmente existente e que abra perspetivas de emancipação.
+No primeiro, sobre **Trabalho e Imigração**, reflete-se sobre a grande transformação no perfil e na composição da classe trabalhadora que resulta de uma presença crescente de trabalhadores estrangeiros em Portugal, e sobre os desafios políticos, económicos, demográficos, sindicais e de organização que isso coloca. O dossier conta com textos de **José Soeiro** (sociólogo e membro da direção da revista), **Catarina Reis de Oliveira** (que dirigiu o Observatório da Imigração), **Alberto Matos** (da associação Solidariedade Imigrante), **João Fraga de Oliveira** (inspetor do trabalho), **Marcel Borges e Hans Donner** (da Associação de Imigrantes Trabalhadores por Aplicação), **Joana Guimarães, Joana S. Marques, Ana Luísa Martinho, Joana Topa** (do projeto MIGAP - MigrAção no Porto) e de **João Pedro Carraça** (investigador). Trata-se de um conjunto de contributos sobre um tema incontornável para o presente e o futuro do trabalho e para construir uma intervenção que tenha em conta a classe trabalhadora realmente existente e que abra perspetivas de emancipação.
 
 O segundo dossier trata da **contra-reforma laboral apresentada pelo Governo**. **Maria da Paz Campos Lima** (socióloga e membro da direção da revista) situa este debate e oferece um roteiro pelo vasto conjunto de contributos que, ao longo dos últimos meses, a nossa revista teve o privilégio de publicar no seu _site_ e que pode ser lido na **secção online** [**Contra-Reforma Laboral**](https://www.mundosdotrabalho.pt/seccao/contra-reforma-laboral)**, em atualização permanente**. O dossier conta ainda com **dois textos inéditos** de duas referências maiores do direito do trabalho em Portugal. **João Leal Amado** faz uma síntese crítica das implicações centrais do Anteprojeto no domínio das relações individuais de trabalho. A revista publica ainda **o primeiro texto público de João Reis, também professor na Universidade de Coimbra, sobre o anteprojeto "Trabalho XXI"**, oferecendo uma análise crítica extensiva e imperdível sobre o significado das alterações propostas no domínio das relações coletivas de trabalho e o modo como chocam com princípios da nossa Constituição.
 
@@ -22,4 +22,4 @@ Na secção **Internacional**, trazemos um texto sobre a mobilização sindical 
 
 Os conteúdos deste segundo número irão sendo partilhados também redes sociais ([Instagram](https://www.instagram.com/mundosdotrabalho.pt/) e [Facebook](https://www.facebook.com/people/Que-For%C3%A7a-%C3%A9-Essa-revista-sobre-os-mundos-do-trabalho/61573861170937/)) da revista.  
 
-Haverá uma **sessão online de apresentação da revista no próximo dia 10 de fevereiro às 21h,** em que discurirá um dos temas centrais deste número**: Trabalho e Imigração**. Mais detalhes serão em breve divulgados.
+Haverá uma **sessão online de apresentação da revista no próximo dia 10 de fevereiro às 21h,** em que discutirá um dos temas centrais deste número**: Trabalho e Imigração**. Mais detalhes serão em breve divulgados.
