--- a/src/app/posts/201.md
+++ b/src/app/posts/201.md
@@ -7,7 +7,7 @@ authorDescription: "Sociólogo e membro da direção da revista Que Força É Es
 section: 'Trabalho e Imigração'
 ---
 
-![Créditos: Paulete Matos](/images/201.jpg)
+![Fotografia de Paulete Matos](/images/201.jpg)
 
 **A figura do ano, entre "trabalhador essencial" e bode expiatório**
 
