--- a/src/app/posts/202.md
+++ b/src/app/posts/202.md
@@ -7,7 +7,7 @@ authorDescription: "Professora no ISCSP e Investigadora do CAPP, Ex-Diretora do 
 section: 'Trabalho e Imigração'
 ---
 
-![Créditos: Paulete Matos](/images/202.jpg)
+![Fotografia de Paulete Matos](/images/202.jpg)
 
 No contexto europeu, Portugal é um dos países de mais tardia transição
 migratória. Dominado pela sua experiência emigratória, assumiu saldos
