--- a/src/app/posts/203.md
+++ b/src/app/posts/203.md
@@ -7,7 +7,7 @@ authorDescription: "Dirigente da Associação Solidariedade Imigrante"
 section: 'Trabalho e Imigração'
 ---
 
-![Créditos: Alberto Matos](/images/203-1.jpg)
+![Fotografia de Alberto Matos](/images/203-1.jpg)
 
 No rescaldo da manifestação de 17 de Setembro de 2025, que juntou perto
 de cinco mil imigrantes frente ao parlamento, circularam algumas
@@ -114,7 +114,7 @@ Numa simples frase: é a economia, estúpido!
 
 **Sudoberry -- uma luta exemplar**
 
-![Créditos: Paulete Matos](/images/203-2.jpg)
+![Fotografia de Paulete Matos](/images/203-2.jpg)
 
 São raras as lutas de trabalhadores imigrantes que chegam ao
 conhecimento público. No entanto elas existem, quase sempre invisíveis.
@@ -135,7 +135,7 @@ feriados, eram pagas pelos mesmos 6,22 euros.
 Um jornal diário chamou-lhe "A revolta dos imigrantes de Odemira que
 perderam o medo"
 
-![Créditos: Jornal Público](/images/203-3.jpg)
+![Fotografia de Jornal Público](/images/203-3.jpg)
 
 Uma Câmara de TV fez a diferença, ao divulgar esta luta quase em direto.
 
