--- a/src/app/posts/204.md
+++ b/src/app/posts/204.md
@@ -7,7 +7,7 @@ authorDescription: "Inspector do trabalho aposentado"
 section: 'Trabalho e Imigração'
 ---
 
-![Créditos: Paulete Matos](/images/204.jpg)
+![Fotografia de Paulete Matos](/images/204.jpg)
 
 **A causa dos acidentes era o chouriço**
 
