--- a/src/app/posts/205.md
+++ b/src/app/posts/205.md
@@ -11,7 +11,7 @@ authorDescription: "IMembros do projeto de investigação-ação MIGAP – MigrA
 section: 'Trabalho e Imigração'
 ---
 
-![Créditos: Paulete Matos](/images/205.jpg)
+![Fotografia de Paulete Matos](/images/205.jpg)
 
 "**Tive que começar do zero": rutura biográfica e invisibilização [^1]**
 
