--- a/src/app/posts/206.md
+++ b/src/app/posts/206.md
@@ -9,7 +9,7 @@ authorDescription: "Dirigentes da Asitrap (Associação dos Imigrantes e Trabalh
 section: 'Trabalho e Imigração'
 ---
 
-![Créditos: Marcel Borges](/images/206.jpg)
+![Fotografia de Marcel Borges](/images/206.jpg)
 
 
 Estamos a começar 2026. Os trabalhadores por App, Estafetas ou TVDE,
