--- a/src/app/posts/207.md
+++ b/src/app/posts/207.md
@@ -7,7 +7,7 @@ authroDescription: "Doutorando em Sociologia, ICS-ULisboa"
 section: 'Trabalho e Imigração'
 --- 
 
-![Créditos: Pedro Fernandes](/images/207.jpg)
+![Fotografia de Pedro Fernandes](/images/207.jpg)
 
 Em Portugal, a *plataformização* do setor de entrega de comida
 iniciou-se, em 2017, quando a *Uber Eats* e a *Glovo* começaram a operar
