--- a/src/app/posts/209.md
+++ b/src/app/posts/209.md
@@ -7,7 +7,7 @@ authorDescription: "Socióloga, membro da Direção da revista Que Força É Ess
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: Ana Durães](/images/209.jpg)
+![Fotografia de Ana Durães](/images/209.jpg)
 
 *Aprende a nadar, companheiro, que a maré se vai levantar...»*[^1]
 
