--- a/src/app/posts/210.md
+++ b/src/app/posts/210.md
@@ -7,7 +7,7 @@ authorDescription: "Professor da Faculdade de Direito da Universidade de Coimbra
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: Ana Durães](/images/210.jpg)
+![Fotografia de Ana Durães](/images/210.jpg)
 
 Em finais de julho, o Governo apresentou aos chamados "parceiros
 sociais" um vasto e ambicioso anteprojeto de reforma das leis do
