--- a/src/app/posts/212.md
+++ b/src/app/posts/212.md
@@ -7,7 +7,7 @@ authorDescription: "Ex-dirigente do Departamento Internacional da CGIL. Membro d
 section: 'Internacional'
 ---
 
-![Créditos: Marco Merlini](/images/212.jpg)
+![Fotografia de Marco Merlini](/images/212.jpg)
 
 Uma semana memorável terminou com a grande marcha pelas ruas de Roma no
 sábado, dia 4 de outubro \[de 2025\]. Um milhão de pessoas ocuparam o
