--- a/src/app/posts/213.md
+++ b/src/app/posts/213.md
@@ -7,7 +7,7 @@ authorDescription: "Professor na Universidade Nova de Lisboa, CICS.NOVA, Portuga
 section: ''
 ---
 
-![Créditos: Freepik](/images/213.jpg)
+![Fotografia de Freepik](/images/213.jpg)
 
 
 A indústria automóvel portuguesa, que inclui os construtores de veículos
