--- a/src/app/posts/214.md
+++ b/src/app/posts/214.md
@@ -7,7 +7,7 @@ authorDescription: "Professora assistente convidada na Escola de Direito do Port
 section: ''
 ---
 
-![Créditos: Pedro Fernandes](/images/214.jpg)
+![Fotografia de Pedro Fernandes](/images/214.jpg)
 
 Para quem se debruce sobre a análise do regime jurídico dos
 despedimentos por motivos económicos -- máxime, o despedimento coletivo
