--- a/src/app/posts/215.md
+++ b/src/app/posts/215.md
@@ -7,7 +7,7 @@ authorDescription: "Jornalista freelancer e sociólogo"
 section: ''
 ---
 
-![Créditos: Esquerda.net](/images/215.jpg)
+![Fotografia de Esquerda.net](/images/215.jpg)
 
 
 No dia 2 de maio de 2025, acompanhava uma ação de protesto dos
