--- a/src/app/posts/216.md
+++ b/src/app/posts/216.md
@@ -7,7 +7,7 @@ authorDescription: "Politólogo, dirigente da Práxis, membro da comissão organ
 section: ''
 ---
 
-![Créditos: Henrique Sousa](/images/216.jpg)
+![Fotografia de Henrique Sousa](/images/216.jpg)
 
 No passado dia 4 de Dezembro, realizou-se em Lisboa uma [conferência
 internacional](https://www.etui.org/events/reviving-worker-participation-portugal-and-europe)
