--- a/src/app/posts/217.md
+++ b/src/app/posts/217.md
@@ -7,7 +7,7 @@ authorDescription: "Professora na Universidade do Minho e na Universidade Lusóf
 section: 'Consultório Jurídico'
 ---
 
-![Créditos: Paulete Matos](/images/217.jpg)
+![Fotografia de Paulete Matos](/images/217.jpg)
 
 A redução do horário e a limitação das jornadas de trabalho sempre
 estiveram no centro das reivindicações sindicais e da luta coletiva dos
