--- a/src/app/posts/218.md
+++ b/src/app/posts/218.md
@@ -7,7 +7,7 @@ authorDescription: "Professora auxiliar na Escola do Porto da Faculdade de Direi
 section: 'Consultório Jurídico'
 ---
 
-![Créditos: José Soeiro](/images/218.jpg)
+![Fotografia de José Soeiro](/images/218.jpg)
 
 As curtas palavras que se seguem são devotadas ao art. 498.º-A do Código
 do Trabalho (CT), preceito aditado ao CT pela reforma intitulada "Agenda
