--- a/src/app/posts/219.md
+++ b/src/app/posts/219.md
@@ -7,7 +7,7 @@ authorDescription: "Universidade de Coimbra, Faculdade de Economia, Centro de Es
 section: 'Abecedário Crítico'
 ---
 
-![Créditos: Ana Durães](/images/219.jpg)
+![Fotografia de Ana Durães](/images/219.jpg)
 
 Independentemente das classificações associadas ao termo "sindicato" --
 que podem variar entre a expressão britânica *trade-union* (união de
