--- a/src/app/posts/220.md
+++ b/src/app/posts/220.md
@@ -24,7 +24,7 @@ começa com "O Estafeta".*
 
 **1. O Estafeta**
 
-![Créditos: Pedro Almeida](/images/220-0.jpg)
+![Fotografia de Pedro Almeida](/images/220-0.jpg)
 
 
 O estafeta dos doze trabalhos é a mais recente personagem-tipo das cenas
@@ -49,7 +49,7 @@ Leitão, *Suplicantes*, em que um entregador atravessa o mar mediterrâneo
 para fazer chegar uma refeição quente a um deputado do Parlamento
 Europeu.
 
-![Créditos: Diogo Marques](/images/220-2.jpg)
+![Fotografia de Diogo Marques](/images/220-2.jpg)
 
 A fotografia de divulgação do espetáculo lembra que por trás de cada
 entrega, longe da vista de toda a gente, há muito esforço ainda por ser
@@ -62,7 +62,7 @@ de 1974-75 e a precariedade dos nossos tempos. Entre outras cenas que
 não cabe aqui recapitular, primeiro, refizemos a famosa cena da enxada
 do filme *Torre Bela* como um número de teatro de Robertos.
 
-![Créditos: João Neto](/images/220-1.jpg)
+![Fotografia de João Neto](/images/220-1.jpg)
 
 Na foto, os Robertos (nas mãos de Sara Henriques e Inês Teixeira) que
 representam Vitória, Eugénio e Wilson, as pessoas que participam na cena
@@ -72,7 +72,7 @@ código Foxtrot e Precópio, no lugar do revolucionário Wilson e do
 camponês Eugénio, e dando voz a um Zé Povinho (que era ao mesmo tempo a
 Enxada), como se pode ver na foto seguinte.
 
-![Créditos: João Neto](/images/220-3.jpg)
+![Fotografia de João Neto](/images/220-3.jpg)
 
 A cena é cantada e a música é tradicional, tocada ao piano por Pedro
 Almeida, e os versos são de Jorge Louraço Figueira e de Pedro Almeida.
