--- a/src/app/posts/28.md
+++ b/src/app/posts/28.md
@@ -6,7 +6,7 @@ author: 'Isabel Roque'
 section: 'Culturas do Trabalho'
 ---
 
-![Créditos: Kyle Loftus](/images/ct1.jpg)
+![Fotografia de Kyle Loftus](/images/ct1.jpg)
 
 Novas formas de extração do trabalho humano destituído de direitos
 laborais e humanos compreendem um processo de transformação não apenas
