--- a/src/app/posts/33.md
+++ b/src/app/posts/33.md
@@ -6,7 +6,7 @@ author: 'João Leal Amado'
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: José Soeiro](/images/33.jpeg)
+![Fotografia de José Soeiro](/images/33.jpeg)
 
 *O anteprojecto governamental de reforma das leis laborais, autodenominado Trabalho XXI, vem sabotar o que vinha a ser feito em matéria de contratação coletiva, destruindo os equilíbrios logrados pelas anteriores reformas legais. Para o legislador deste anteprojeto “dinamizar a contratação coletiva” consiste afinal em facilitar a morte da convenção coletiva de trabalho.*
 
