--- a/src/app/posts/47.md
+++ b/src/app/posts/47.md
@@ -6,7 +6,7 @@ author:
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: Paulete Matos](/images/imagem_manif.jpg)
+![Fotografia de Paulete Matos](/images/imagem_manif.jpg)
 
 A direita no Governo prepara-se para impor uma contrarreforma laboral que põe em causa direitos, fragiliza ainda mais os trabalhadores e reforça o poder patronal e financeiro. Invocando “modernização” ou “flexibilização”, o que se propõe é, na verdade, precariedade, individualização das relações laborais, erosão da contratação coletiva e da greve, bem como o enfraquecimento dos sindicatos. O objetivo é claro: desarmar os trabalhadores para fortalecer empresas e capital.
 Perante tal ofensiva, seria natural esperar uma resposta firme e coordenada do movimento sindical. Contudo, apesar da recusa comum ao TRABALHO XXI, as centrais sindicais continuam presas às suas tradições e culturas próprias, incapazes de construir um entendimento mínimo para enfrentar o adversário comum. Esta divisão fragiliza toda a ação sindical e transmite aos trabalhadores e à sociedade uma imagem de irrelevância e impotência.
