--- a/src/app/posts/48.md
+++ b/src/app/posts/48.md
@@ -6,7 +6,7 @@ author: ["Henrique Sousa", "Joana Neto", "João Leal Amado", "José Soeiro", "Ma
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: LUSA](/images/48.jpeg)
+![Fotografia de LUSA](/images/48.jpeg)
 
 "O trabalho que o século XXI reclama": eis o título escolhido pela Ministra do Trabalho para o primeiro texto público, saído há dias num [outro
 jornal](https://www.publico.pt/2025/09/06/opiniao/opiniao/trabalho-seculo-xxi-reclama-2146135), em que argumentou a favor da proposta de alteração às leis laborais cujo debate se inicia nesta quarta-feira em sede de concertação social. Será mesmo assim?
