--- a/src/app/posts/49.md
+++ b/src/app/posts/49.md
@@ -6,7 +6,7 @@ author: 'Ricardo Paes Mamede'
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: LUSA](/images/49.jpg)
+![Fotografia de LUSA](/images/49.jpg)
 
 Nas vésperas de Agosto, com o país já a banhos, o governo aprovou um [Anteprojeto de Lei da reforma da legislação laboral](https://www.portugal.gov.pt/download-ficheiros/ficheiro.aspx?v=%3D%3DBQAAAB%2BLCAAAAAAABAAzNDE1sgAAScL4wgUAAAA%3D). O objectivo, como é óbvio, era passar de mansinho. A pouco e pouco, vamos todos ganhando consciência do que está em causa.
 
