--- a/src/app/posts/5.md
+++ b/src/app/posts/5.md
@@ -7,7 +7,7 @@ author: 'Isabel Roque'
 section: '50 anos do 25 de Abril'
 ---
 
-![Créditos: Paulete Matos](/images/2_PM.jpg)
+![Fotografia de Paulete Matos](/images/2_PM.jpg)
 
 O século XXI caracteriza-se por um contexto de policrise em que o
 capitalismo enfrenta mais uma das suas metamorfoses manifesta em tensões
