--- a/src/app/posts/53.md
+++ b/src/app/posts/53.md
@@ -6,7 +6,7 @@ author: 'Miguel Cabrita'
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: Hugo Amaral / ECO](/images/cabrita.jpg)
+![Fotografia de Hugo Amaral / ECO](/images/cabrita.jpg)
 
 1. No passado fim-de-semana, a ministra do Trabalho escreveu no PÚBLICO um artigo em que procura justificar as dezenas de alterações à lei laboral apresentadas pelo Governo. Merece comentário pelo que escolhe dizer, e como, e sobretudo pelo que decide omitir. Ao ponto de precisar de uma espécie de “errata” para não enviesar a leitura do que está de facto em causa.
 2. Ponto prévio: é importante lembrar que nem o programa eleitoral nem declarações anteriores dos responsáveis políticos permitiam antecipar a dimensão ou até o radicalismo de muitas das alterações entretanto conhecidas.
