--- a/src/app/posts/54.md
+++ b/src/app/posts/54.md
@@ -6,7 +6,7 @@ author: 'Vicente Ferreira'
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: Pedro Nunes / Expresso](/images/54.png)
+![Fotografia de Pedro Nunes / Expresso](/images/54.png)
 
 
 **Os salários são baixos por causa da "rigidez" do mercado de trabalho?**
