--- a/src/app/posts/56.md
+++ b/src/app/posts/56.md
@@ -6,7 +6,7 @@ author: 'Maria da Paz Campos Lima'
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: Nuno Ferreira Santos / Público](/images/56.jpeg)
+![Fotografia de Nuno Ferreira Santos / Público](/images/56.jpeg)
 
 
 
