--- a/src/app/posts/57.md
+++ b/src/app/posts/57.md
@@ -6,7 +6,7 @@ author: ["Catarina de Oliveira Carvalho", "Joana Nunes Vicente", "Luísa Andias 
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: LUSA](/images/57.jpeg)
+![Fotografia de LUSA](/images/57.jpeg)
 
 1.  **Evolução legislativa**
 
