--- a/src/app/posts/58.md
+++ b/src/app/posts/58.md
@@ -6,7 +6,7 @@ author: "João Leal Amado"
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: José Soeiro](/images/58.jpeg)
+![Fotografia de José Soeiro](/images/58.jpeg)
 
 «Uma presunção legal eficaz exige que o direito nacional torne efetivamente mais fácil para as pessoas que trabalham em plataformas digitais beneficiarem da presunção. Os requisitos da presunção legal não deverão ser onerosos e deverão diminuir as dificuldades que as pessoas que trabalham em plataformas digitais possam ter em apresentar elementos de prova que indiquem a existência de uma relação de trabalho numa situação em que se verifica um desequilíbrio de poder face à plataforma de trabalho digital. O objetivo da presunção legal é resolver e corrigir eficazmente o desequilíbrio de poder entre as pessoas que trabalham em plataformas digitais e as plataformas de trabalho digitais. As modalidades da presunção legal deverão ser definidas pelos Estados-Membros, na medida em que as mesmas assegurem a previsão de uma presunção legal ilidível efetiva de emprego que constitua uma facilitação processual em benefício das pessoas que trabalham em plataformas digitais, e que não tenham por efeito aumentar o ónus dos requisitos para as pessoas que trabalham em plataformas digitais, ou para os seus representantes, em processos que visem determinar o estatuto profissional correto dessas pessoas».
 O trecho acima transcrito consta do Considerando n.º 31 da Diretiva UE 2024/2831, relativa à melhoria das condições de trabalho em plataformas digitais. E, em boa verdade, Portugal até se antecipou a esta diretiva, visto que, aquando da aprovação da Agenda do Trabalho Digno, foi aditado ao Código do Trabalho um novo artigo, o 12.º-A, que veio a revelar-se em quase total sintonia com a legislação aprovada, ano e meio após, pela União Europeia.
