--- a/src/app/posts/59.md
+++ b/src/app/posts/59.md
@@ -6,7 +6,7 @@ author: "João Leal Amado"
 section: 'Plataformas Digitais'
 ---
 
-![Créditos: José Soeiro](/images/59.jpeg)
+![Fotografia de José Soeiro](/images/59.jpeg)
 
 Uma das normas mais polémicas da Agenda do Trabalho Digno consistiu no novo art. 338.º-A do Código do Trabalho, que proíbe ao empregador a aquisição de serviços externos a entidade terceira para satisfação de necessidades que foram asseguradas por trabalhador que, nos 12 meses anteriores, tenha sido alvo de despedimento coletivo ou por extinção de posto de trabalho.
 A nova norma foi sujeita a crítica intensa, não faltando quem tenha alegado que ela conteria uma solução excessiva, restringindo inadmissivelmente o âmbito de exercício da liberdade de iniciativa económica privada, enquanto liberdade de gerir a empresa sem interferências externas. Porém, a própria Provedora de Justiça, que suscitou a questão junto do Tribunal Constitucional (TC), logo reconheceu que, à luz da Constituição (CRP), «é claríssimo que a liberdade do empresário nunca inclui a liberdade de despedir».
