--- a/src/app/posts/63.md
+++ b/src/app/posts/63.md
@@ -5,7 +5,7 @@ date: '2025-12-06'
 author: "João Fraga de Oliveira"
 section: 'Contra-reforma laboral'
 ---
-![Créditos: José Soeiro](/images/63.jpeg)
+![Fotografia de José Soeiro](/images/63.jpeg)
 
 \- "Independentemente do impacto económico, eu gostava de referir o impacto social que todas as greves têm… a greve é um instituto danoso, quero dizer, tem um efeito danoso";
 
