--- a/src/app/posts/64.md
+++ b/src/app/posts/64.md
@@ -6,7 +6,7 @@ author: "Henrique Sousa"
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: José Soeiro](/images/grevegeralgrafitti.png)
+![Fotografia de José Soeiro](/images/grevegeralgrafitti.png)
 
 Os dados estatísticos oficiais sobre greves em Portugal são de má qualidade e não são confiáveis. O poder político tortura os números e a realidade.
 
