--- a/src/app/posts/66.md
+++ b/src/app/posts/66.md
@@ -6,7 +6,7 @@ author: "Manuel Carvalho da Silva"
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: José Soeiro](/images/grevegeralpedra.jpg)
+![Fotografia de José Soeiro](/images/grevegeralpedra.jpg)
 
 A greve geral anunciada pela Confederação Geral dos Trabalhadores Portugueses - Intersindical Nacional (CGTP-IN) e pela União Geral dos Trabalhadores (UGT), para o dia 11 de dezembro, será uma luta laboral justíssima e um importante ato coletivo em defesa da democracia.
 
