--- a/src/app/posts/72.md
+++ b/src/app/posts/72.md
@@ -6,7 +6,7 @@ author: "Manuel Carlos Silva"
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: Henrique Borges](/images/72.jpg)
+![Fotografia de Henrique Borges](/images/72.jpg)
 
 Ainda que sujeito a diversas concepções, o trabalho é um conceito nuclear e uma realidade vivida e valorizada pelos cidadãos/ãs, nomeadamente pelos trabalhadores/as, em diversos inquéritos (inter)nacionais, não só em termos de identidade de classe, como base co-explicativa, ora de solidariedades, ora de conflitos sociais. Mais, no quadro do capitalismo, é fonte de desiguais expectativas, níveis salariais e condições habitacionais, de proximidades ou distâncias sociais, posicionamentos políticos e outras práticas sociais.
 
