--- a/src/app/posts/1.md
+++ b/src/app/posts/1.md
@@ -7,7 +7,7 @@ author: 'Fernando Rosas'
 section: '50 anos do 25 de Abril'
 ---
 
-![Créditos: Paulete Matos](/images/22_PM.jpg)
+![Fotografia de Paulete Matos](/images/22_PM.jpg)
 
 
 É muito importante que, no cinquentenário da revolução que permitiu aos
@@ -167,7 +167,7 @@ anomia social e a impotência para responder às novas formas de
 exploração e de pulverização social introduzidas pelo capitalismo
 neoliberal.
 
-![Créditos: Paulete Matos](/images/16_PM.jpg)
+![Fotografia de Paulete Matos](/images/16_PM.jpg)
 
 No imediato pós-abrilismo, o PCP, beneficiando das posições que detinha
 no movimento sindical, ocupa o aparelho sindical corporativo e, ao
