--- a/src/app/posts/211.md
+++ b/src/app/posts/211.md
@@ -7,7 +7,7 @@ authorDescription: "Professor da Faculdade de Direito da Universidade de Coimbra
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: Ana Durães](/images/211.jpg)
+![Fotografia de Ana Durães](/images/211.jpg)
 
 **Introdução**
 
