--- a/src/app/posts/68.md
+++ b/src/app/posts/68.md
@@ -6,7 +6,7 @@ author: "Margarida Chagas Lopes"
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: Regina Guimarães](/images/regina2.jpeg)
+![Fotografia de Regina Guimarães](/images/regina2.jpeg)
 
 Que venha a rua!
 
@@ -58,4 +58,4 @@ onde o amor se faz de arrojo e desassombro
 
 e se cumpre o sonho feito de luta e de razão.
 
-Créditos: Margarida Chagas Lopes
+Fotografia de Margarida Chagas Lopes
